--- a/src/assets/styles/scss/02-base/_grid.scss
+++ b/src/assets/styles/scss/02-base/_grid.scss
@@ -61,6 +61,7 @@ $col-11: 91.666667%;
 
     .ice-sidebar-left {
       flex: 0 0 $col-3;
+      display: initial;
       position: sticky;
       top: 0;
 
